compiler/src/parser/snapshots/narwhal__parser__tests__expr#31.snap
---
source: src/parser/tests.rs
description: i_dentifier
---
Path@0..11
  PathComponent@0..11
    Ident@0..11 "i_dentifier"
