compiler/src/parser/snapshots/narwhal__parser__tests__expr#4.snap
---
source: src/parser/tests.rs
description: x + y * z
---
ExprInfix@0..9
  Path@0..1
    PathComponent@0..1
      Ident@0..1 "x"
  Whitespace@1..2 " "
  Plus@2..3 "+"
  ExprInfix@3..9
    Path@3..5
      PathComponent@3..5
        Whitespace@3..4 " "
        Ident@4..5 "y"
    Whitespace@5..6 " "
    Star@6..7 "*"
    Path@7..9
      PathComponent@7..9
        Whitespace@7..8 " "
        Ident@8..9 "z"
