compiler/src/parser/snapshots/narwhal__parser__tests__expr#8.snap
---
source: src/parser/tests.rs
description: f()()
---
ExprCall@0..5
  ExprCall@0..3
    Path@0..1
      PathComponent@0..1
        Ident@0..1 "f"
    LeftParen@1..2 "("
    RightParen@2..3 ")"
  LeftParen@3..4 "("
  RightParen@4..5 ")"
