compiler/src/parser/snapshots/narwhal__parser__tests__function#0.snap
---
source: src/parser/tests.rs
description: "fn f() -> Int { return 10; }"
---
Function@0..28
  Signature@0..13
    FnKw@0..2 "fn"
    Whitespace@2..3 " "
    Ident@3..4 "f"
    LeftParen@4..5 "("
    RightParen@5..6 ")"
    Whitespace@6..7 " "
    Arrow@7..9 "->"
    Path@9..13
      PathComponent@9..13
        Whitespace@9..10 " "
        Ident@10..13 "Int"
  Block@13..28
    Whitespace@13..14 " "
    LeftBrace@14..15 "{"
    StmtReturn@15..26
      Whitespace@15..16 " "
      ReturnKw@16..22 "return"
      Whitespace@22..23 " "
      Int@23..25 "10"
      Semicolon@25..26 ";"
    Whitespace@26..27 " "
    RightBrace@27..28 "}"
