compiler/src/parser/snapshots/narwhal__parser__tests__import#0.snap
---
source: src/parser/tests.rs
description: import foo;
---
Import@0..11
  ImportKw@0..6 "import"
  Path@6..10
    PathComponent@6..10
      Whitespace@6..7 " "
      Ident@7..10 "foo"
  Semicolon@10..11 ";"
