compiler/src/parser/snapshots/narwhal__parser__tests__path#0.snap
---
source: src/parser/tests.rs
description: foo
---
Path@0..3
  PathComponent@0..3
    Ident@0..3 "foo"
